--- a/src/panels/login.html
+++ b/src/panels/login.html
@@ -13,7 +13,7 @@
             <small class="info-login">&nbsp;</small>
 
             <div class="login-card-mojang-input">
-                <label>Adresse mail</label>
+                <label>Pseudo</label>
                 <input type="text" class="Mail login-mojang-input" spellcheck="false">
                 <small class="error-mail">&nbsp;</small>
             </div>
